Imagens de fundo - modifiquei o fundo - alterando (tipo de inspeção, Eixos, Município e equipamento) - alterando colunas - alterando colunas(1). - alterando colunas (1.2). - modificando(eixo equipe técnica) - (alterando tabela inteligente1.1) - (modificando tabela condensada e tabela inteligente) - (modificando parte fale conosco e perguntas frequentes 1.1) - (tabela condesada ok) - (imagens observatório ok) - (perguntas frequentes ok) - (manuais e cartilhas ok) - (modifiquei o fundo) -

--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -31,7 +31,7 @@
 
 
       <div class="container">
-        <div class='col-md-6'>
+        <div class="col-md-6">
           <h3><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="{{ ( 'Calendário'| baProfilePicture ) }}" width="45" height="45"> INÍCIO*</b></h3>
           <div class="form-group">
             <div class='input-group date' id='datetimepicker6'>
@@ -43,14 +43,9 @@
           </div>
         </div>
 
-        <div class='col-md-6'>
-          <h3><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="{{ ( 'Calendário'| baProfilePicture ) }}" width="45" height="45"> FIM*</b></h3>
+        <div class="col-md-6">
           <div class="form-group">
             <div class='input-group date' id='datetimepicker7'>
-              <input type='text' class="form-control" />
-              <span class="input-group-addon">
-                    <span class="glyphicon glyphicon-calendar"></span>
-                </span>
             </div>
           </div>
         </div>
@@ -75,7 +70,7 @@
 
       <div class="row">
       <ba-card class="col-xl-6 col xl-0"
-      title="TIPO DE INSPEÇÃO" baCardClass="small-card">
+      title="TIPO DE INSPEÇÃO*" baCardClass="small-card">
         <div class="bs-example">
           <div class="btn-group-justified">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#" class="btn btn-primary"><b>CRAS</b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
@@ -87,7 +82,7 @@
 
 
       <ba-card class="col-xl-6 col xl-0"
-               title="EIXOS" baCardClass="small-card">
+               title="EIXOS*" baCardClass="small-card">
         <div class="button-wrapper">
           <button type="button" class="btn btn-default btn-raised">EQUIPE TÉCNICA</button>
           <button type="button" class="btn btn-default btn-raised">INFRAESTRUTURA</button>
@@ -100,7 +95,7 @@
         <div></div>
 
       <ba-card class="col-xl-6 col-xl-0"
-        title="MUNICÍPIO" baCardClass="small-card">
+        title="MUNICÍPIO*" baCardClass="small-card">
         <div class="button-wrapper">
           <button type="button" class="btn btn-default btn-raised">ANGRA DOS REIS</button>
           <button type="button" class="btn btn-default btn-raised">BARRA DO PIRAÍ</button>
@@ -112,7 +107,7 @@
 
 
         <ba-card class="col-xl-6 col-xl-0"
-                 title="EQUIPAMENTO" baCardClass="small-card with-scroll feed-panel">
+                 title="EQUIPAMENTO*" baCardClass="small-card with-scroll feed-panel">
           <div class="button-wrapper">
             <button type="button" class="btn btn-default btn-raised">CRAS BARRA DO PIRAÍ CENTRO</button>
             <button type="button" class="btn btn-default btn-raised">CRAS BARRA DO PIRAÍ AREAL</button>
@@ -152,21 +147,21 @@
       <ba-card title="QUESTÕES" baCardClass="with-scroll heading-widget">
 
         <div class="section-block">
-          <h2><b>    <span class="label label-primary"> EIXO EQUIPE TÉCNICA. </span></b></h2>
+          <h2><b>  <span class="label label-danger"> EIXO EQUIPE TÉCNICA. </span></b></h2>
           <h4> <b> A equipe técnica está em conformidade com a nobrh? </b> </h4>
           <h4> <b> São promovidas atividades de capacitação para equipe? </b> </h4>
         </div>
 
 
         <div class="section-block">
-          <h2><b> <span class="label label-primary"> EIXO PROGRAMAS, PROJETOS, SERVIÇOS E BENEFÍCIOS. </span></b></h2>
+          <h2><b> <span class="label label-danger"> EIXO PROGRAMAS, PROJETOS, SERVIÇOS E BENEFÍCIOS. </span></b></h2>
           <h4> <b> O paif funciona conforme a resolução cit 04/2011?</b></h4>
           <h4> <b>Existe regulamentação dos benefícios eventuais? </b></h4>
           <h4> <b>A frequência das visitas domiciliares é compatível com a necessidade dos usuários?</b></h4>
         </div>
 
         <div class="section-block">
-          <h2><b> <span class="label label-primary"> EIXO INFRAESTRUTURA.</span></b></h2>
+          <h2><b> <span class="label label-danger"> EIXO INFRAESTRUTURA.</span></b></h2>
           <h4> <b> O equipamento possui acessibilidade conforme as normas estabelecidas pela abnt(nbr 9050)? </b></h4>
         </div>
 
@@ -509,7 +504,7 @@
                     <hr color="white">
 
                     <div class="panel panel-default">
-                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h4><b>4. O QUE SÃO BENEFÍCIOS INDIVIDUAIS </b></h4></a>
+                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h4><b>4. O QUE SÃO BENEFÍCIOS INDIVIDUAIS?</b></h4></a>
                       <div id="collapseFour" class="panel-collapse collapse">
                         <div class="panel-body">
                           <h3><b><i>AAAAAA BBBBBB CCCCCC DDDDDD</i></b></h3>
@@ -517,6 +512,9 @@
                       </div>
 
 
-
                       <hr color="white">
+
+
+
+
 
