-Ajuste da primeira tela. <ba-card> Sobre o projeto e Indicadores das inspeções.

--- a/src/app/pages/tela2/buttons/components/municipiosButtons/municipiosButtons.html
+++ b/src/app/pages/tela2/buttons/components/municipiosButtons/municipiosButtons.html
@@ -1,6 +1,7 @@
 
 <div class="btn-group flex-dropdown" dropdown>
-  <button type="button" class="btn bg-primary" dropdownToggle addToggleClass="true"> </button>
+  <button type="button" class="btn btn-default" dropdownToggle addToggleClass="true" >
+     </button>
   <ul class="dropdown-menu" dropdownMenu>
     <li class="dropdown-item"><a href="#"> A </a></li>
     <li class="dropdown-divider"></li>
