--- a/src/app/pages/tela2/dadosMunicipais2/dadosMunicipais2.html
+++ b/src/app/pages/tela2/dadosMunicipais2/dadosMunicipais2.html
@@ -1,24 +1,24 @@
 <div>
-<ba-card class="col-xl-6 col-lg-6 col-md-6"  >
+<div class="col-xl-5 col-lg-5 col-md-5"  >
   <div class="horizontal-scroll">
     <table>
       <tr>
-        <td class="alinhaesq"> MUNICÍPIO <p class="municipio"> Barra do Piraí </p></td>
-        <td class="alinhadir"> FAMÍLIAS VULNERÁVEIS <p class="dados"> 9.014</p></td>
+        <td class="alinhaesq"> MUNICÍPIO <p class="municipio"> Barra do <br> Piraí </p></td>
+        <td class="alinhadir"> FAMÍLIAS <br> VULNERÁVEIS  <p class="dados"> 9.014</p></td>
       </tr>
 
       <tr>
-        <td > PERCENTUAL MUNICIPAL <p class="percentual"> 9,89% </p> </td>
-        <td> PERCENTUAL ESTADUAL <p class="percentual"> 0,63% </td>
+        <td > PERCENTUAL <br> MUNICIPAL <p class="percentual"> 9,89% </p> </td>
+        <td> PERCENTUAL <br> ESTADUAL <p class="percentual"> 0,63% </td>
       </tr>
     </table>
 
   <hr>
 
-    <table >
+    <table>
       <tr>
-        <td> TOTAL DE EQUIPAMENTOS <p class="totalequipamentos"> 5 </p></td>
-        <td> PERCENTUAL ESTADUAL <p class="percentual"> 0,86% </p></td>
+        <td> TOTAL DE <br> EQUIPAMENTOS <p class="totalequipamentos"> 5 </p></td>
+        <td> PERCENTUAL <br> ESTADUAL <p class="percentual"> 0,86% </p></td>
       </tr>
     </table>
 
@@ -37,5 +37,5 @@
 
   </div>
 
-</ba-card>
+</div>
 </div>
