--- a/src/app/pages/tela2/rioDeJaneiro/rioDeJaneiro.scss
+++ b/src/app/pages/tela2/rioDeJaneiro/rioDeJaneiro.scss
@@ -25,18 +25,22 @@
   text-align: center;
 }
 
+table{
+  font-size: 10px;
+}
 .fonte{
   font-family: "Arial Black", arial-black;
-  font-size: 20px;
+  font-size: 15px;
   color: white;
 }
 .dados{
   font-family: "Arial Black", arial-black;
-  font-size: 20px;
+  font-size: 15px;
   color:midnightblue;
 }
 
 hr{
   border: 1px solid;
+  margin-top: auto;
 
 }
