--- a/src/app/pages/tela1/tela1.html
+++ b/src/app/pages/tela1/tela1.html
@@ -1,7 +1,7 @@
 <div class="row">
-  <div class="col-xlg-4 col-lg-5 col-md-5 col-sm-5 col-xs-5">
+  <ba-card title="Sobre o Projeto" class="col-xlg-4 col-lg-5 col-md-5 col-sm-5 col-xs-5">
     <typography></typography>
-  </div>
+  </ba-card>
 
   <ba-card title="Indicadores referentes às últimas inspeções em cada município" class="col-xlg-7 col-lg-7  col-md-7 col-sm-7 col-xs-7">
       <e-buttons></e-buttons>
@@ -11,7 +11,6 @@
   </div>
 
 <div class="row">
-
   <ba-card class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4">
     <pecasAtuacao-table></pecasAtuacao-table>
   </ba-card>
@@ -23,5 +22,5 @@
     <ba-card class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4">
     <orcamento-table></orcamento-table>
   </ba-card>
-
 </div>
+
