--- a/src/app/pages/tela1/typography/typography.html
+++ b/src/app/pages/tela1/typography/typography.html
@@ -1,13 +1,5 @@
 <div class="typography-document-samples row">
 
-          <h1>
-            <p class="fonte"> SOBRE </p>
-            <p class="fonte"> <b> O PROJETO </b> </p>
-
-          </h1>
-
-          <hr color="white">
-
           <p> O projeto pretende estruturar uma ação coordenada e estratégica do MPRJ
            para fiscalizar e exigir a implementação adequada da Política de Assistência
           Social, bem como provocar a intervenção dos atores sociais vocacionados
@@ -15,15 +7,15 @@
 
           <br>
           <ul style="list-style-type:circle ">
-            <li> Exigir a implementação integral da Política de Assistência Social; </li> &nbsp;
-            <li> Construção de uma metodologia de trabalho nova; </li> &nbsp;
-            <li> Criação de indicadores para dimensionamento da oferta e demanda; </li> &nbsp;
+            <li> Exigir a implementação integral da Política de Assistência Social; </li> &nbsp; &nbsp;
+            <li> Construção de uma metodologia de trabalho nova; </li> &nbsp; &nbsp;
+            <li> Criação de indicadores para dimensionamento da oferta e demanda; </li> &nbsp; &nbsp;
             <li> Estabelecer, mediante diálogo com todas as Tutelas Coletivas do MPRJ, padrões
               de referência para avaliação da quantidade e qualidade dos serviços ofertados;
-            </li> &nbsp;
-            <li> Monitorar os padrões de referência por meio de indicadores; </li> &nbsp;
+            </li> &nbsp; &nbsp;
+            <li> Monitorar os padrões de referência por meio de indicadores; </li> &nbsp; &nbsp;
             <li> Articular parcerias com instâncias de controle social para fomentação da
-              fiscalização do SUAS; </li> &nbsp;
+              fiscalização do SUAS; </li> &nbsp; &nbsp;
           </ul>
 
 </div>
