Imagens de fundo - modifiquei o fundo - alterando (tipo de inspeção, Eixos, Município e equipamento) - alterando colunas - alterando colunas(1). - alterando colunas (1.2). - modificando(eixo equipe técnica) - (alterando tabela inteligente1.1) - (modificando tabela condensada e tabela inteligente) - (modificando parte fale conosco e perguntas frequentes 1.1) - (tabela condesada ok) - (imagens observatório ok) - (perguntas frequentes ok) - (manuais e cartilhas ok) - (modifiquei o fundo) - (modificando tabela condesada.1.1) -

--- a/src/app/pages/tela3/tela3.html
+++ b/src/app/pages/tela3/tela3.html
@@ -407,38 +407,148 @@
           <p></p>
           <b><span class="label label-danger">EIXO, PROGRAMAS, PROJETOS, SERVIÇOS E BENEFÍCIOS.</span></b> <hr color="white">
           <p></p>
-          <b>O PAIF FUNCIONA CONFORME A RESOLUÇÃO CIT 04/2011?</b><hr color="white">
+          https://cursos.alura.com.br/course/vraptor        <b>O PAIF FUNCIONA CONFORME A RESOLUÇÃO CIT 04/2011?</b><hr color="white">
           <p></p>
-          <b>EXISTE REGULAMENTAÇÃO DOS BENEFÍCIOS EVENTUAIS?</b><hr color="white">
+          <b>https://cursos.alura.com.br/user/flavio-almeidaEXISTE REGULAMENTAÇÃO DOS BENEFÍCIOS EVENTUAIS?</b><hr color="white">
           <p></p>
-          <b>A FREQUÊNCIA DAS VISITAS DOMICILIARES É COMPATÍVEL COM A NECESSIDADE DOS USUÁRIOS?</b><hr color="white">
+          <b>A F
+            Curso AngularJS para WebApps RESTfulREQUÊNCIA DAS VISITAS DOMICILIARES É COMPATÍVEL COM A NECESSIDADE DOS USUÁRIOS?</b><hr color="white">
           <p></p>
           <b><span class="label label-danger">EIXO INFRAESTRUTURA</span></b><hr color="white">
           <p></p>
           <b>O EQUIPAMENTO POSSUI ACESSIBILIDADE CONFORME AS NORMAS ESTABELECIDAS PELA ABNT(NBR 9050)?</b><hr color="white">
-
         </ba-card>
 
 
         <ba-card class="col-xl-3 col-lg-6 col-md-6"
                  title="CRAS - BARRA DO PIRAÍ - CENTRO" baCardClass="medium-card">
           <div class="button-wrapper">
-            JANEIRO/2016 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MARÇO/2016&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MAIO/2016
+            JANEIRO/2016 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MARÇO/2016&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MAIO/2016 &nbsp;
+            &nbsp;
+
+            <table border="1" cellpadding="15">
+              <colgroup>
+                <col style="background: #;">
+                <col style="background: #;">
+              </colgroup>
+              <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>SIM</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>SIM</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>NÃO</b>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+              </tr>
+              <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>NÃO</b></td>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>SIM</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>SIM</b>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+              </tr>
+            </table>
+
           </div>
         </ba-card>
 
         <ba-card class="col-xl-3 col-lg-6 col-md-6"
                  title="CRAS - BARRA DO PIRAÍ - CALIFÓRNIA DA BARRA" baCardClass="medium-card">
           <div class="button-wrapper">
+            JANEIRO/2016 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MARÇO/2016&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MAIO/2016
+            <hr color="white">
+            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b>
+            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b>
+            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b>
+            &nbsp;
+            &nbsp;
+
+            <hr color="white">
+            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b>
+            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b>
+            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b>
+            <hr color="white">
           </div>
         </ba-card>
 
         <ba-card class="col-xl-3 col-lg-6 col-md-6"
                  title="CRAS - BARRA DO PIRAÍ - VARGEM ALEGRE" baCardClass="medium-card">
           <div class="button-wrapper">
+            JANEIRO/2016 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MARÇO/2016&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MAIO/2016
+            <hr color="white">
+            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b>
+            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b>
+            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b>
+            &nbsp;
+            &nbsp;
+
+            <hr color="white">
+            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b>
+            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b>
+            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b>
+            <hr color="white">
           </div>
         </ba-card>
 
 
       <div class="row">
         <div></div>
+
+
+        <ba-card class="col-xl-3 col-lg-6 col-md-6"
+                 title="CRAS - BARRA DO PIRAÍ - VARGEM ALEGRE" baCardClass="medium-card">
+          <div class="button-wrapper">
+            <table>
+              <thead>
+              <tr>
+                <th>JANEIRO/2016</th>
+                <th>MARÇO/2016</th>
+                <th>MAIO/2016</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr>
+                <td colspan="2">SIM</td>
+                <td>SIM</td>
+                <td>NÃO</td>
+              </tr>
+              <tr>
+                <td colspan="2">NÃO</td>
+                <td>SIM</td>
+                <td>SIM</td>
+              </tr>
+              <tr>
+                <td colspan="2">SIM</td>
+                <td>SIM</td>
+                <td>SIM</td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
+        </ba-card>
+
+
+
+        <table border="1" width="400" height="100">
+          <tr>
+            <td>row 1, cell 1</td>
+            <td>row 1, cell 2</td>
+          </tr>
+          <tr>
+            <td>row 2, cell 1</td>
+            <td>row 2, cell 2</td>
+          </tr>
+        </table>
+
+
+
+        <table border="2" cellpadding="10">
+          <colgroup>
+            <col style="background: #f5871f;">
+            <col style="background: #ff4444;">
+            </colgroup>
+          <tr>
+            <td>row 1, cell 1</td>
+            <td>row 1, cell 2</td>
+          </tr>
+          <tr>
+            <td>row 2, cell 1</td>
+            <td>row 2, cell 2</td>
+          </tr>
+        </table>
+
+
