--- a/src/app/pages/tela3/tela3.html
+++ b/src/app/pages/tela3/tela3.html
@@ -394,161 +394,71 @@
 
 
 
-
-
-      <div class="row">
-        <ba-card class="col-xl-3 col-lg-6 col-md-6"
-                 title="TIPO DE INSPEÇÃO*" baCardClass="">
-          <b><span class="label label-danger">EIXO EQUIPE TÉCNICA</span></b><hr color="white">
-          <p></p>
-          <b>A EQUIPE TÉCNICA ESTÁ EM CONFORMIDADE COM A NOBRH?</b> <hr color="white">
-          <p></p>
-          <b>SÃO PROMOVIDAS ATIVIDADES DE CAPACITAÇÃO PARA EQUIPE?</b> <hr color="white">
-          <p></p>
-          <b><span class="label label-danger">EIXO, PROGRAMAS, PROJETOS, SERVIÇOS E BENEFÍCIOS.</span></b> <hr color="white">
-          <p></p>
-          https://cursos.alura.com.br/course/vraptor        <b>O PAIF FUNCIONA CONFORME A RESOLUÇÃO CIT 04/2011?</b><hr color="white">
-          <p></p>
-          <b>https://cursos.alura.com.br/user/flavio-almeidaEXISTE REGULAMENTAÇÃO DOS BENEFÍCIOS EVENTUAIS?</b><hr color="white">
-          <p></p>
-          <b>A F
-            Curso AngularJS para WebApps RESTfulREQUÊNCIA DAS VISITAS DOMICILIARES É COMPATÍVEL COM A NECESSIDADE DOS USUÁRIOS?</b><hr color="white">
-          <p></p>
-          <b><span class="label label-danger">EIXO INFRAESTRUTURA</span></b><hr color="white">
-          <p></p>
-          <b>O EQUIPAMENTO POSSUI ACESSIBILIDADE CONFORME AS NORMAS ESTABELECIDAS PELA ABNT(NBR 9050)?</b><hr color="white">
-        </ba-card>
-
-
-        <ba-card class="col-xl-3 col-lg-6 col-md-6"
-                 title="CRAS - BARRA DO PIRAÍ - CENTRO" baCardClass="medium-card">
-          <div class="button-wrapper">
-            JANEIRO/2016 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MARÇO/2016&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MAIO/2016 &nbsp;
-            &nbsp;
-
-            <table border="1" cellpadding="15">
-              <colgroup>
-                <col style="background: #;">
-                <col style="background: #;">
-              </colgroup>
-              <tr>
-                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>SIM</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>SIM</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>NÃO</b>&nbsp;&nbsp;&nbsp;&nbsp;</td>
-              </tr>
-              <tr>
-                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>NÃO</b></td>
-                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>SIM</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>SIM</b>&nbsp;&nbsp;&nbsp;&nbsp;</td>
-              </tr>
-            </table>
-
-          </div>
-        </ba-card>
-
-        <ba-card class="col-xl-3 col-lg-6 col-md-6"
-                 title="CRAS - BARRA DO PIRAÍ - CALIFÓRNIA DA BARRA" baCardClass="medium-card">
-          <div class="button-wrapper">
-            JANEIRO/2016 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MARÇO/2016&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MAIO/2016
-            <hr color="white">
-            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b>
-            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b>
-            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b>
-            &nbsp;
-            &nbsp;
-
-            <hr color="white">
-            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b>
-            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b>
-            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b>
-            <hr color="white">
-          </div>
-        </ba-card>
-
-        <ba-card class="col-xl-3 col-lg-6 col-md-6"
-                 title="CRAS - BARRA DO PIRAÍ - VARGEM ALEGRE" baCardClass="medium-card">
-          <div class="button-wrapper">
-            JANEIRO/2016 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MARÇO/2016&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MAIO/2016
-            <hr color="white">
-            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b>
-            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b>
-            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b>
-            &nbsp;
-            &nbsp;
-
-            <hr color="white">
-            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b>
-            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b>
-            <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b>
-            <hr color="white">
-          </div>
-        </ba-card>
-
-
-      <div class="row">
-        <div></div>
-
-
-        <ba-card class="col-xl-3 col-lg-6 col-md-6"
-                 title="CRAS - BARRA DO PIRAÍ - VARGEM ALEGRE" baCardClass="medium-card">
-          <div class="button-wrapper">
-            <table>
-              <thead>
-              <tr>
-                <th>JANEIRO/2016</th>
-                <th>MARÇO/2016</th>
-                <th>MAIO/2016</th>
-              </tr>
-              </thead>
-              <tbody>
-              <tr>
-                <td colspan="2">SIM</td>
-                <td>SIM</td>
-                <td>NÃO</td>
-              </tr>
-              <tr>
-                <td colspan="2">NÃO</td>
-                <td>SIM</td>
-                <td>SIM</td>
-              </tr>
-              <tr>
-                <td colspan="2">SIM</td>
-                <td>SIM</td>
-                <td>SIM</td>
-              </tr>
-              </tbody>
-            </table>
-          </div>
-        </ba-card>
-
-
-
-        <table border="1" width="400" height="100">
+        <table class="tabela">
+          <thead class="tabela-head">
           <tr>
-            <td>row 1, cell 1</td>
-            <td>row 1, cell 2</td>
+            <td rowspan="2">
+              QUESTÕES
+            </td>
+            <td colspan="3"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CRAS - BARRA DO PIRAI - CENTRO</b></td>
+            <td colspan="3"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CRAS - BARRA DO PIRAI - CALIFÓRNIA DA BARRA</b></td>
+            <td colspan="3"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CRAS - BARRA DO PIRAI - VARGEM ALEGRIA</b></td>
+          </tr>
+
+          <tr>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;JANEIRO/2016</td>
+            <td>MARÇO/2016</td>
+            <td>MAIO/2016</td>
+
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;JANEIRO/2016</td>
+            <td>MARÇO/2016&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td>MAIO/2016&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;JANEIRO/2016</td>
+            <td>MARÇO/2016</td>
+            <td>MAIO/2016</td>
+          </tr>
+
+
+          </thead>
+          <tbody>
+          <tr>
+            <span class="label label-danger"><td><b>EIXO EQUIPE TECNICA</b></td> </span>
           </tr>
           <tr>
-            <td>row 2, cell 1</td>
-            <td>row 2, cell 2</td>
+            <td>QUIPE TECNICA ESTÁ EM CONFORMIDADE COM A NOBRH ?</td>
+
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
+            <td><b>SIM</b></td>
+            <td><b>NÃO</b></td>
+
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
+
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
           </tr>
+
+            <tr>
+            <td>QUIPE TECNICA ESTÁ EM CONFORMIDADE COM A NOBRH ?</td>
+
+
+          <tr>
+            <td></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
+            <td><b>SIM</b></td>
+            <td><b>SIM</b></td>
+
+
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
+            <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
+
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>NÃO</b></td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>NÃO</b></td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>NÃO</b></td>
+          </tr>
+          </tbody>
         </table>
-
-
-
-        <table border="2" cellpadding="10">
-          <colgroup>
-            <col style="background: #f5871f;">
-            <col style="background: #ff4444;">
-            </colgroup>
-          <tr>
-            <td>row 1, cell 1</td>
-            <td>row 1, cell 2</td>
-          </tr>
-          <tr>
-            <td>row 2, cell 1</td>
-            <td>row 2, cell 2</td>
-          </tr>
-        </table>
-
-
