- Ajuste do NavBar. - Alteração dos botões municipiosButtons e anoButtons

--- a/src/app/pages/tela2/tela2.html
+++ b/src/app/pages/tela2/tela2.html
@@ -4,12 +4,11 @@
    <rio-de-janeiro> </rio-de-janeiro>
     </ba-card>
 
-    <div class="col-xlg-8 col-xl-8 col-lg-8 col-sm-8 col-xs-8">
-      <dados-municipais2></dados-municipais2>
-
-        <div id="scroll">
+    <div class="col-xl-8 col-lg-8 col-md-8 col-sm-8 col-xs-8">
+        <dados-municipais2></dados-municipais2>
+      <div>
          <municipios-buttons></municipios-buttons>
-        </div>
+      </div>
   </div>
 
   </div>
@@ -42,7 +41,7 @@
 <div class="row">
 
   <ba-card title="Indicadores Orçamentários" class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    <ano-buttons> </ano-buttons>
+  <ano-buttons> </ano-buttons>
 
     <div class="row">
       <ba-card> <pse> </pse></ba-card>
