--- a/src/app/theme/components/baPageTop/baPageTop.html
+++ b/src/app/theme/components/baPageTop/baPageTop.html
@@ -9,23 +9,23 @@
   </div>
 
   <div class="user-profile clearfix" align="right">
-    <a>
+    <a href="#">
      <img src="{{ ( 'inicio' | baProfilePicture ) }}" width="30px" height="30px"> Início
     </a>
 
-    <a>
+    <a href="#">
       <img src="{{ ( 'dados-dos-municipios' | baProfilePicture ) }}" width="20px" height="20px"> Dados dos Municípios
     </a>
 
-    <a>
+    <a href="#">
      <img src="{{ ( 'inspecoes' | baProfilePicture ) }}" width="30px" height="30px"> Inspeções
     </a>
 
-    <a>
+    <a href="#">
       <img src="{{ ( 'ajuda' | baProfilePicture ) }}" width="30px" height="30px"> Ajuda
     </a>
 
-    <a >
+    <a href="#" >
       <img src="{{ ( 'sitio-mds' | baProfilePicture ) }}" width="20px" height="20px"> MDS
     </a>
 
