--- a/src/app/theme/components/baPageTop/baPageTop.scss
+++ b/src/app/theme/components/baPageTop/baPageTop.scss
@@ -6,7 +6,7 @@
   position: fixed;
   z-index: 904;
   box-shadow: 2px 0 3px rgba(0, 0, 0, 0.5);
-  height: 66px;
+  height: 55px;
   width: 100%;
   min-width: $resMin;
   padding: 0 32px 0 40px;
@@ -183,4 +183,9 @@ a.collapse-menu-link {
 .profile-toggle-link{
   cursor: pointer;
 }
+
+a:visited{
+  color: white;
+}
+
 
