Tela 2 - Ajuste do tamanho dos cards Dados Municipais, Dados Municipais 2 e Indicadores Sociais. - Ajuste do tamanho, posicionamento e da cor do municipiosButtons e anoButtons.

--- a/src/app/pages/tela2/buttons/components/municipiosButtons/municipiosButtons.scss
+++ b/src/app/pages/tela2/buttons/components/municipiosButtons/municipiosButtons.scss
@@ -1,7 +1,8 @@
 #barra-de-rolagem {
   width:300px;
-  height:200px;
+  height:100px;
   background-color: white;
+  opacity:0.7;
   overflow: auto;
   float:right;
 }
@@ -18,8 +19,7 @@ ul li {
 ul li a{
   padding: 5px;
   text-decoration: none;
-  color:black;
-
+  color:slategray;
 }
 ul li a:hover {
   text-decoration: underline;
