--- a/src/app/pages/tela2/dadosMunicipais2/dadosMunicipais2.html
+++ b/src/app/pages/tela2/dadosMunicipais2/dadosMunicipais2.html
@@ -1,6 +1,6 @@
 <div>
-<div class="col-xl-5 col-lg-5 col-md-5"  >
-  <div class="horizontal-scroll">
+<div >
+  <div  class="col-xl-5 col-lg-5 col-md-5">
     <table>
       <tr>
         <td class="alinhaesq"> MUNICÍPIO <p class="municipio"> Barra do <br> Piraí </p></td>
