--- a/src/app/pages/tela2/dadosMunicipais2/dadosMunicipais2.scss
+++ b/src/app/pages/tela2/dadosMunicipais2/dadosMunicipais2.scss
@@ -40,7 +40,7 @@
 .equipamentos{
   font-family: "Arial Black", arial-black;
   font-size: 15px;
-  color: #282828;
+  color: slategray;
   text-align: center;
 
 }
@@ -48,7 +48,7 @@
  .municipio{
    font-family: "Arial Black", arial-black;
    font-size: 15px;
-   color: #282828;
+   color: slategray;
 
  }
 
@@ -57,5 +57,5 @@ hr{
   border: 1px solid;
   margin-top: auto;
   margin-left: 0%;
-  width:70%;
+  width:30%;
 }
