--- a/src/app/pages/tela2/tela2.html
+++ b/src/app/pages/tela2/tela2.html
@@ -1,18 +1,21 @@
 <div class="row">
-  <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+  <div>
     <ba-card class="col-xl-2 col-lg-2 col-md-2">
    <rio-de-janeiro> </rio-de-janeiro>
     </ba-card>
 
-    <div class="col-xl-8 col-lg-8 col-md-8 col-sm-8 col-xs-8">
-        <dados-municipais2></dados-municipais2>
-      <div>
-         <municipios-buttons></municipios-buttons>
-      </div>
-  </div>
+    <div>
+      <dados-municipais2></dados-municipais2>
+    </div>
+
+    <div class="col-xl-2 col-lg-2 col-md-2">
+      <municipios-buttons></municipios-buttons>
+    </div>
+
 
   </div>
 </div>
+
 
 
 <div>
@@ -28,21 +31,20 @@
 
 
 <div class="row">
-  <ba-card title="Dados Municipais" class="col-xl-4 col-lg-3 col-md-3 col-sm-3 col-xs-3">
+  <ba-card title="Dados Municipais" class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-xs-2">
     <dados-municipais> </dados-municipais>
   </ba-card>
 
-  <ba-card title="Indicadores Sociais" class="col-xl-8 col-lg-8 col-md-8 col-sm-8 col-xs-8">
+  <ba-card title="Indicadores Sociais" class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6">
     <indicadores-sociais> </indicadores-sociais>
   </ba-card>
 
 </div>
 
 <div class="row">
-
-  <ba-card title="Indicadores Orçamentários" class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
   <ano-buttons> </ano-buttons>
 
+  <ba-card title="Indicadores Orçamentários" class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
     <div class="row">
       <ba-card> <pse> </pse></ba-card>
       <ba-card> <psb> </psb></ba-card>
