--- a/src/app/pages/tela2/buttons/components/anoButtons/anoButtons.scss
+++ b/src/app/pages/tela2/buttons/components/anoButtons/anoButtons.scss
@@ -1,7 +1,8 @@
 #barra-de-rolagem {
   width:300px;
-  height:200px;
+  height:50px;
   background-color: white;
+  opacity: 0.7;
   overflow: auto;
   float:right;
 }
@@ -18,7 +19,7 @@ ul li {
 ul li a{
   padding: 5px;
   text-decoration: none;
-  color:black;
+  color:slategray;
 
 }
 ul li a:hover {
@@ -32,6 +33,6 @@ ul li:hover ul {
 }
 
 p{
-  font-size: 15px;
+  font-size: 20px;
   font-weight: bold;
 }
