Imagens de fundo - modifiquei o fundo - alterando (tipo de inspeção, Eixos, Município e equipamento) - alterando colunas - alterando colunas(1). - alterando colunas (1.2). - modificando(eixo equipe técnica) - (alterando tabela inteligente1.1) - (modificando tabela condensada e tabela inteligente) - (modificando parte fale conosco e perguntas frequentes 1.1) - (tabela condesada ok) - (imagens observatório ok) - (perguntas frequentes ok) - (manuais e cartilhas ok) - (modifiquei o fundo) - (modificando tabela condesada.1.1) - (modificando tabela) - (modificando tabela 1.1) - ( modificando bottons(EIXO) -

--- a/src/app/pages/tela3/tela3.html
+++ b/src/app/pages/tela3/tela3.html
@@ -26,6 +26,7 @@
     </ba-card>
   </div>
 
+
   <div class="row">
     <div></div>
 
@@ -67,11 +68,21 @@
       <ba-card class="col-xl-6 col-xl-0"
                title="MUNICÍPIO*" baCardClass="small-card">
         <div class="button-wrapper">
-          <button type="button" class="btn btn-default btn-raised">ANGRA DOS REIS</button>
-          <button type="button" class="btn btn-default btn-raised">BARRA DO PIRAÍ</button>
-          <button type="button" class="btn btn-default btn-raised">NITERÓI</button>
-          <button type="button" class="btn btn-default btn-raised">SÃO GONÇALO</button>
-          <button type="button" class="btn btn-default btn-raised">RIO DE JANEIRO</button>
+          <button type="button" class="btn btn-default btn-raised"><b>ANGRA DOS REIS</b></button>
+          <button type="button" class="btn btn-default btn-raised"><b>BARRA DO PIRAÍ</b></button>
+          <button type="button" class="btn btn-default btn-raised"><b>NITERÓI</b></button>
+          <button type="button" class="btn btn-default btn-raised"><b>SÃO GONÇALO</b></button>
+          <button type="button" class="btn btn-default btn-raised"><b>RIO DE JANEIRO</b></button>
+          <button addtoggleclass="true" class="btn btn-default dropdown-toggle" dropdowntoggle="" type="button" ng-reflect-add-toggle-class="true" aria-haspopup="true">
+            <b>MACAÉ</b>
+
+          </button>
+
+
+
+
+
+
         </div>
       </ba-card>
 
@@ -119,10 +130,10 @@
           <thead class="tabela-head">
           <tr>
             <td rowspan="2">
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;QUESTÕES
+            <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;QUESTÕES</h3>
             </td>
-            <td colspan="3"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CRAS - BARRA DO PIRAI - CENTRO</b></td>
-            <td colspan="3"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CRAS - BARRA DO PIRAI - CALIFÓRNIA DA BARRA</b></td>
+            <td colspan="3"><b><h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CRAS - BARRA DO PIRAI - CENTRO</h5></b></td>
+            <td colspan="3"><b><h5>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CRAS - BARRA DO PIRAI - CALIFÓRNIA DA BARRA</h5></b></td>
             <td colspan="3"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CRAS - BARRA DO PIRAI - VARGEM</b></td>
           </tr>
 
@@ -148,12 +159,12 @@
 
           <tbody>
           <tr>
-            <span class="btn-primary"><td><b>EIXO EQUIPE TECNICA</b></td> </span>
+            <span class="btn-primary"><td><b><h4>EIXO EQUIPE TECNICA</h4></b></td> </span>
           </tr>
           &nbsp;
 
           <tr>
-            <td>EQUIPE TECNICA ESTÁ EM CONFORMIDADE COM A NOBRH ?</td>
+            <td><h5>EQUIPE TECNICA ESTÁ EM CONFORMIDADE COM A NOBRH ?</h5></td>
 
             <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
             <td><b>SIM</b></td>
@@ -169,7 +180,7 @@
           </tr>
 
             <tr>
-            <td>SÃO PROMOVIDAS ATIVIDADES DE CAPACITAÇÃO PARA EQUIPE ?</td>
+              <td><h5>SÃO PROMOVIDAS ATIVIDADES DE CAPACITAÇÃO PARA EQUIPE ?</h5></td>
               <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
               <td><b>SIM</b></td>
               <td><b>SIM</b></td>
@@ -186,12 +197,12 @@
           <hr color="white">
 
           <tr>
-            <span class="btn-primary"><td><b>EIXO PROGRAMAS, PROJETOS, SERVIÇOS E BENEFÍCIOS.</b></td> </span>
+            <span class="btn-primary"><td><b><h4>EIXO PROGRAMAS, PROJETOS, SERVIÇOS E BENEFÍCIOS.</h4></b></td> </span>
           </tr>
           &nbsp;
 
            <tr>
-            <td>O PAIF FUNCIONA CONFORME A RESOLUÇÃO CIT 04/2011?</td>
+             <td><h5>O PAIF FUNCIONA CONFORME A RESOLUÇÃO CIT 04/2011?</h5></td>
 
             <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
             <td><b>SIM</b></td>
@@ -208,7 +219,7 @@
           </tr>
 
           <tr>
-            <td>EXISTE REGULAMENTAÇÃO DOS BENEFÍCIOS EVENTUAIS?</td>
+            <td><h5>EXISTE REGULAMENTAÇÃO DOS BENEFÍCIOS EVENTUAIS?</h5></td>
             <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
             <td><b>SIM</b></td>
             <td><b>SIM</b></td>
@@ -223,7 +234,7 @@
 
 
           <tr>
-            <td>A FREQ DAS VISITAS DOMICILIARES É COMPATÍVEL COM A NECESSIDADE DOS USUÁRIOS?</td>
+            <td><h5>A FREQUÊNCIA DAS VISITAS DOMICILIARES É COMPATÍVEL COM A NECESSIDADE DOS USUÁRIOS?</h5></td>
             <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIM</b></td>
             <td><b>SIM</b></td>
             <td><b>SIM</b></td>
@@ -240,13 +251,13 @@
           <hr color="white">
 
           <tr>
-            <span class="btn-primary"><td><b>EIXO INFRAESTRUTURA</b></td> </span>
+            <span class="btn-primary"><td><b><h4>EIXO INFRAESTRUTURA</h4></b></td> </span>
           </tr>
 
           &nbsp;
 
           <tr>
-            <td>O EQUIPAMENTO POSSUI ACESSIBILIDADE CONFORME AS NORMAS ESTABELECIDAS PELA ABNT (NBR 9050)?</td>
+            <td><h5>O EQUIPAMENTO POSSUI ACESSIBILIDADE CONFORME AS NORMAS ESTABELECIDAS PELA ABNT (NBR 9050)?</h5></td>
 
             <td><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NÃO</b></td>
             <td><b>NÃO</b></td>
@@ -267,3 +278,34 @@
           </tr>
           </tbody>
         </table>
+  </div>
+</div>
+
+
+
+
+<button addtoggleclass="true" class="btn btn-default dropdown-toggle" dropdowntoggle="" type="button" ng-reflect-add-toggle-class="true" aria-haspopup="true">
+  <b>MACAÉ</b>
+
+</button>
+
+
+
+  <div class="btn-group flex-dropdown" dropdown>
+<button addtogleclass="true" class="btn btn-default dropdown-toggle" dropdownToggle="" type="button" ng-reflect-add-toggle-class="true" aria-haspopup="true">
+    <b>MACAÉ</b>
+    </button>
+    <ul class="dropdown-menu" dropdownMenu>
+      <li class="dropdown-item"><a href="#"> A </a></li>
+      <li class="dropdown-divider"></li>
+      <li class="dropdown-item"><a href="#"> Angra dos Reis </a></li>
+      <li class="dropdown-item"><a href="#"> Aperibé</a></li>
+      <li class="dropdown-item"><a href="#"> Araruama </a></li>
+      <li class="dropdown-item"><a href="#"> Areal </a></li>
+      <li class="dropdown-item"><a href="#"> Armação dos Búzios </a></li>
+      <li class="dropdown-item"><a href="#"> Arraial do Cabo </a></li>
+      <li class="dropdown-divider"></li>
+
+  </ul>
+</div>
+
